content/v1/5.api-reference/3.constructors.md
# Constructors

Constructors are used to create new instances of a struct. They are used to initialize the struct with the required data.

There are 3 constructors in the **GM-I18n** API:

---

## I18nLocaleInit

The `I18nLocaleInit` constructor is used to create a new locale data.

#### Syntax

::code-group
```js [Usage]
new I18nLocaleInit(lang_code, lang_name, [lang_file]);
```

```ts [Signature]
function I18nLocaleInit(
    lang_code: string,
    lang_name: string,
    lang_file?: string | string[]       // default = ""
): I18nLocaleInit
```

```ts [Type]
type I18nLocaleInit = {
    code: string;
    name: string;
    file?: string | string[];
}
```
::


#### Parameters

| Name        | Type              | Default      | Description |
|-------------|-------------------|--------------|-------------|
| lang_code   | String            |              | The locale code, for example `en` or `id`. |
| lang_name   | String            |              | The locale name, for example `English` or `Indonesian`. |
| lang_file   | String \| String\[] |  "" | The locale file path, for example `~/langs/en.json`. You can also pass an array of string if you want to load multiple files for a single locale. |

#### Returns

> `I18nLocaleInit`

#### Examples

```js [Create Event]
// initialize the GM-I18n system
global.i18n = i18n_create("global.i18n", "en", [
    new I18nLocaleInit("en", "English", "~/langs/en.json"),
    new I18nLocaleInit("id", "Indonesian", "~/langs/id.json")
]);

// initialize the GM-I18n system with multiple files for a single locale
global.i18n = i18n_create("global.i18n", "en", [
    new I18nLocaleInit("en", "English", ["~/langs/en1.json", "~/langs/en2.json"]),
    new I18nLocaleInit("id", "Indonesian", "~/langs/id.json")
]);
```

::alert{type="info"}
You can use "`~/`" as a shorthand of [`working_directory`](https://manual.gamemaker.io/lts/en/GameMaker_Language/GML_Reference/File_Handling/File_Directories/working_directory.htm) in the `lang_file` parameter. But if you're targeting on HTML5 export, please don't use this shorthand.
::

---

## I18nLoad

:badge[Internal]{type="warning"} &nbsp; The `I18nLoad` constructor is used to create a new locale files loader. 

#### Syntax

::code-group
```js [Usage]
new I18nLoad(interval, [i18n]);
```

```ts [Signature]
function I18nLoad(
    interval: number | number[],
    i18n?: I18n | boolean           // default = false (using global i18n struct)
): I18nLoad
```

```ts [Type]
type I18nLoad = {
    i18n: I18n;
    files: string[];
	files_locale: string[];
	max_step: number;               // integer
	step: number;                   // integer
	step_index: number;             // integer
	step_time: number[];            // integer[]
	time: number | number[];
    dt: () => number;
    update: (
        use_delta_time?: boolean    // default = false
    ) => void;
    load: (
        filename: string, 
        locale: string
    ) => void;
    flatten: (
        struct: { 
            [key: string]: string 
        }, 
        i18n: I18n, 
        locale?: string,            // default = ""
        prefix?: string             // default = ""
    ) => void;
}
```
::

#### Parameters

| Name        | Type              | Default      | Description |
|-------------|-------------------|--------------|-------------|
| interval    | Real              |              | The interval between each locale file loading in seconds. |
| i18n        | Boolean \| I18n | `false`      | The `i18n` struct reference, or leave it empty to use the `global` i18n struct. |

#### Returns

> `I18nLoad`


::alert{type="warning"}
**This constructor is used internally by the** [`i18n_create()`](/v1/api-reference/functions/i18n-create) **function. You don't need to use it directly.**
::

---

## I18nDrawings

The `I18nDrawings` constructor is used to create a new drawing preset.

#### Syntax

::code-group
```js [Usage]
new I18nDrawings([draw_font], [draw_halign], [draw_valign], [draw_color], [draw_scale], [draw_rotation], [draw_alpha], [text_sep], [text_width]);
```

```ts [Signature]
function I18nDrawings(
    draw_font?: Font,
    draw_halign?: fa_left | fa_center | fa_right,
    draw_valign?: fa_top | fa_middle | fa_bottom,
    draw_color?: number | number[],     // color constants, or color gradient [c1, c2, c3, c4]
    draw_scale?: number,
    draw_rotation?: number,
    draw_alpha?: number,                // 0 - 1
    text_sep?: number,                  // default = -1
    text_width?: number                 // default = room_width
): I18nDrawings
```

```ts [Type]
type I18nDrawings = {
    alpha?: number;                     // 0 - 1
    color?: number | number[];          // color constants, or color gradient [c1, c2, c3, c4]
    draw_type: I18N_DRAW_TEXT;
    font?: Font;
    halign?: fa_left | fa_center | fa_right;
    rotation?: number;
    scale?: number;
    sep: number;                        // default = -1
    valign?: fa_top | fa_middle | fa_bottom;
    width: number;                       // default = room_width
}
```
::

#### Parameters

| Name          | Type              | Default      | Description |
|---------------|-------------------|--------------|-------------|
| draw_font     | Font Asset \| String        | `undefined`  | The font to use in `draw_set_font()` function. If a string is provided, it will be converted to an asset index. |
| draw_halign   | HAlign            | `undefined`  | The horizontal alignment to use in `draw_set_halign()` function. |
| draw_valign   | VAlign            | `undefined`  | The vertical alignment to use in `draw_set_valign()` function. |
| draw_color    | Color \| Color\[] | `undefined`  | The color to use in `draw_set_color()` function, or the color gradient to use in `draw_text*_color()` function. |
| draw_scale    | Real              | `undefined`  | The both scale (`x_scale` and `y_scale`) of the **text**. |
| draw_rotation | Real              | `undefined`  | The angle (`rotation`) of the **text**. |
| draw_alpha    | Real              | `undefined`  | The opacity (`alpha`) of the **text**. |
| text_sep      | Real              | `-1`         | The distance between each line (`sep`) of the **text**. |
| text_width    | Real              | `room_width` | The maximum width (`w`) of the text. |
| is_template   | Boolean           | `false`      | Whether the drawing preset is a template or not. |

#### Returns

> `I18nDrawings`

#### Examples

::code-group
```js [Raw]
// only for explanation purpose, DON'T copy-paste this code
// title
I18nDrawings(fnNotoSans, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1);

// header
I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1);

// body
I18nDrawings(fnNotoSans, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, 32, 700);

// with other font
I18nDrawings(fnRoboto, fa_right, fa_bottom, #999999, 0.7, 0, 1, -1, 700);

// font asset created from code
I18nDrawings(global.font_ja, fa_left, fa_middle, #FFFFFF, 1, 0, 1);
```

```js [Create Event]
// assume the system is initialized on global variable
// focus only on the I18nDrawings constructor

// standard
i18n_add_drawings("en", "title", 
    new I18nDrawings(fnNotoSans, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1)
);

// completed
i18n_add_drawings("en", "header", 
    new I18nDrawings(fnRoboto, fa_right, fa_bottom, #999999, 0.7, 0, 1, -1, 700)
);

// skip some parameters
i18n_add_drawings("ja", "header", 
    new I18nDrawings(global.font_ja, , , #FFFFFF)
);

i18n_add_drawings("ja", "body", 
    new I18nDrawings(, , , , 0.8, 0, 1, 32, 700)
);
```
::

::alert{type="info"}
You can skip any parameters you don't want to use. The missing parameters will be ignored when used in [`i18n_use_drawing()`](/v1/api-reference/functions/i18n-use-drawing) function. <br> <br>

You can read the detailed explanation in the [Drawing](/v1/usage/drawing#constructor) section.
::

---

::alert{type="success"}
:icon{name="material-symbols:award-star-outline-rounded"} &nbsp; These constructors only be used in the **GM-I18n** initialization process. So, you likely won't need to use them again after the initialization.
::
